--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,8 +13,9 @@ jobs:
       uses: actions/setup-node@v1
     - name: npm install, build, and test
       run: |
-        npm ci
+        yarn install --frozen-lockfile
+        # npm ci
         # npm run build --if-present
-        npm test
+        yarn test
       env:
         CI: true
