--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^12.7.5",
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
+    "release-it": "^13.6.4",
     "ts-jest": "^24.3.0",
     "typescript": "^3.7.5"
   }
